[tool.poetry]
name = "covalent-api-example"
version = "0.1.0"
description = "An example of using the covalent API. Retrieving historical prices by ticker."
authors = ["erc30"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.17.1"
pandas = "^1.2.3"
plotly = "^4.14.3"
environs = "^9.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
